Bug 117355 - Color picker for setting background color of master slide is missing from content panel of its Sidebar deck
Summary: Color picker for setting background color of master slide is missing from con...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.3.2 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.1.0 target:6.0.5
Keywords: bibisected, bisected, regression
: 117168 (view as bug list)
Depends on:
Blocks: Sidebar-Properties-Slide
  Show dependency treegraph
 
Reported: 2018-04-30 21:37 UTC by muso
Modified: 2018-05-11 08:01 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description muso 2018-04-30 21:37:44 UTC
- open the master view
- select there for the background "color"

result: you cannot specify a color.

The only way to set a color is to set at first "gradient" , then "color". Only then you get the color selection combobox.
Comment 1 muso 2018-04-30 21:46:41 UTC
This bug also appears with all slides, not necessarily with master slides.
Comment 2 raal 2018-05-01 06:31:52 UTC
View -> Master slide
Sidebar "Master slide" select Background:color

I can confirm with Version: 6.1.0.0.alpha1+
Build ID: 4dbce627d3643babaf90a93c70b365ff08abfca6
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 

works OK in 5.3-> regression
Comment 3 V Stuart Foote 2018-05-01 07:02:38 UTC
Confirmed. Neither a color value nor the color picker shows in the Sidebar -> Master Slide content panel without first cycling the drop list: color -> gradient -> color. 

However other means to set slide background color.

View -> Master Slide
Context menu: Properties
   Background tab -> Color
     Choose palette
     Pick color

OR

View -> Master Slide
Slide -> Properties
   Background tab -> Color
     Choose palette
     Pick color

=-testing-=
Windows 10 Pro 64-bit en-US with
Version: 6.1.0.0.alpha1+ (x64)
Build ID: 8a2745e1beee722c8c9691c397e493cc1160bedf
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-05-01_00:38:47
Locale: en-US (en_US); Calc: CL
Comment 4 Xisco Faulí 2018-05-02 15:27:25 UTC
Regression introduced by:

author	Tamás Zolnai <tamas.zolnai@collabora.com>	2017-11-11 19:10:01 +0100
committer	Tamás Zolnai <tamas.zolnai@collabora.com>	2017-11-11 22:05:28 +0100
commit 4c656c82ccdaa47cf447dfff4147b339b44ea8c1 (patch)
tree 299732d536e8f6e12a376b69cf9ebc0f5e29ae6e
parent d945bc4598f75e4cb1a1bf9df8942f14ef065d74 (diff)
tdf#111835: Hide Master slide / close master slide button in notes view
These buttons are designed for normal and master slide view.

Bisected with: bibisect-linux64-6.0

Adding Cc: to Tamás Zolnai
Comment 5 Xisco Faulí 2018-05-02 15:37:29 UTC
Patch submitted to master: https://gerrit.libreoffice.org/#/c/53746/
Comment 6 Xisco Faulí 2018-05-02 15:38:01 UTC
No need to go to master slide, it also happens in normal view...
Comment 7 Xisco Faulí 2018-05-02 16:18:27 UTC
*** Bug 117168 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2018-05-05 11:14:57 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7237db44dfac914e5b6003f418267d3df1e7f162

tdf#117355 Show color picker on the sidebar

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 V Stuart Foote 2018-05-06 03:00:24 UTC
Yup, selecting the color from LB exposes the active color and links the Dialog from the content panel.

Version: 6.1.0.0.alpha1+ (x64)
Build ID: 7237db44dfac914e5b6003f418267d3df1e7f162
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-05-05_12:19:17
Locale: en-US (en_US); Calc: group
Comment 10 Commit Notification 2018-05-11 08:01:26 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16a357ced2f18bfd3f8bd3c64071cb5f0333d92c&h=libreoffice-6-0

tdf#117355 Show color picker on the sidebar

It will be available in 6.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.