tdf#117355 Show color picker on the sidebar

Change-Id: I3e69b4247b679e0ceb3c8cee5d6fecf82ad8c445
Reviewed-on: https://gerrit.libreoffice.org/53746
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit 7237db44dfac914e5b6003f418267d3df1e7f162)
Reviewed-on: https://gerrit.libreoffice.org/53890
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>